src/main/java/com/example/tinybank/errors/ClientCreationException.java
package com.example.tinybank.errors;

public class ClientCreationException extends Exception{
    public ClientCreationException(String message){
        super(message);
    }
}
